--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,6 @@ assignment2/part2/logs
 
 # Assignment 3
 assignment3/data
-assignment3/part1/**/VAE_logs
+assignment3/part1/VAE_logs
 assignment3/part2/data
+assignment3/part2/adversarial_examples
